Bugfix: align price tag

--- a/app/assets/stylesheets/_homestay_show.css.scss
+++ b/app/assets/stylesheets/_homestay_show.css.scss
@@ -49,7 +49,7 @@
       max-width: 160px;
       height: 50px;
       position: relative;
-      bottom: 77px;
+      bottom: 87px;
       padding: 5px 30px;
       background-color: $orange;
       span {
